--- a/src/app/pages/projects/list/list.component.html
+++ b/src/app/pages/projects/list/list.component.html
@@ -14,8 +14,9 @@
 <div class="row g-4 mb-3">
   <div class="col-sm-auto">
       <div>
-          <a routerLink="/projects/create" class="btn btn-danger">
-            <!--<i class="ri-add-line align-bottom me-1"></i> -->Crea un Proyecto</a>
+          <!--<a routerLink="/projects/create" class="btn btn-success">-->
+            <!--<i class="ri-add-line align-bottom me-1"></i> --><!--Crea un Proyecto</a>-->
+          <button type="button" class="btn btn-success btn-label waves-effect left waves-light" routerLink="/projects/create"><i class="ri-add-line label-icon align-middle fs-16"><!--ms-2--></i> Crear un Proyecto</button>
       </div>
   </div>
   <div class="col-sm">
