--- a/src/app/pages/projects/areas/areas.component.html
+++ b/src/app/pages/projects/areas/areas.component.html
@@ -30,8 +30,8 @@
                         <div class="col-sm">
                             <div class="d-flex justify-content-sm-end">
                                 <div class="search-box ms-2">
-                                    <input type="text" class="form-control search" placeholder="Buscar..."
-                                        [(ngModel)]="service.searchTerm">
+                                    <input type="text" class="form-control" style="width: 300px;" placeholder="Buscar..."
+                                        [(ngModel)]="service.searchTerm"><!--search-->
                                     <i class="ri-search-line search-icon"></i>
                                 </div>
                                 
@@ -83,9 +83,9 @@
                         <table mat-table [dataSource]="dataSource" class="table" style="border: gainsboro !important;"><!--class="mat-elevation-z8"-->
                             <ng-container matColumnDef="nombre">
                                 
-                              <th mat-header-cell *matHeaderCellDef> 
-                                <span [style.paddingLeft.px]="40"> Nombre </span>
-                              </th>
+                              <th class="th-center" mat-header-cell *matHeaderCellDef> 
+                                <span> Nombre </span>
+                              </th><!--[style.paddingLeft.px]="40"-->
                             
                               <td mat-cell *matCellDef="let data"> 
                                 <span 
@@ -116,20 +116,27 @@
                             </ng-container>--> 
                           
                             <ng-container matColumnDef="descripcion">
-                              <th mat-header-cell *matHeaderCellDef> Descripción </th>
+                              <th class="th-center" mat-header-cell *matHeaderCellDef> Descripción </th>
                               <td mat-cell *matCellDef="let data">
                                 <ngb-highlight [result]="data.descripcion"></ngb-highlight>
                               </td>
                             </ng-container> 
 
                             <ng-container matColumnDef="accion">
-                                <th mat-header-cell *matHeaderCellDef style="width: 100px;"> Acción </th>
+                                <th class="th-center" mat-header-cell *matHeaderCellDef style="width: 100px;"> Acción </th>
                                 <td mat-cell *matCellDef="let data">
   
                                       <div class="d-flex gap-2">
                                           <div class="edit">
                                             <div class="hstack gap-3 fs-15">
-                                                <a href="javascript:void(0);" class="link-primary" 
+                                                <button type="button" class="btn btn-primary w-xxs" data-bs-toggle="modal" data-bs-target="#showModal" (click)="editModal(content,data.id)">Editar</button>
+
+                                                <button type="button" class="btn btn-info w-md" data-bs-toggle="modal" data-bs-target="#showModal" (click)="openModal(content, data.id)">Sub Area</button>
+
+                                                <button type="button" class="btn btn-danger w-xxs" data-bs-toggle="modal" data-bs-target="#deleteRecordModal"
+                                                (click)="confirm(deleteModel,data.id)">Eliminar</button>
+
+                                                <!--<a href="javascript:void(0);" class="link-primary" 
                                                 title="Ver"
                                                 data-bs-toggle="modal" data-bs-target="#showModal" (click)="editModal(content,data.id)"><i class="ri-eye-line"></i></a>
 
@@ -139,7 +146,7 @@
                                                 <a href="javascript:void(0);" class="link-danger" 
                                                 title="Eliminar"
                                                 data-bs-toggle="modal" data-bs-target="#deleteRecordModal"
-                                                (click)="confirm(deleteModel,data.id)"><i class="ri-delete-bin-5-line"></i></a>
+                                                (click)="confirm(deleteModel,data.id)"><i class="ri-delete-bin-5-line"></i></a>-->
                                             </div>
 
                                           </div>
@@ -187,7 +194,7 @@
 <!-- Add ListJs Data -->
 <ng-template #content role="document" let-modal>
     <div class="modal-header bg-light p-3">
-        <h5 class="modal-title" id="exampleModalLabel"><span *ngIf="area_id">Sub </span>Area Administrativa</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Agregar <span *ngIf="area_id">Sub </span>Area Administrativa</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar" id="close-modal"
             (click)="modal.dismiss('Cross click')"></button>
     </div>
