--- a/src/app/pages/projects/config/config.component.html
+++ b/src/app/pages/projects/config/config.component.html
@@ -16,18 +16,18 @@
         <div class="row">
             <div class="col-lg-12">
                 <!-- Nav tabs -->
-                <ul ngbNav #nav="ngbNav" [activeId]="1" class="nav nav-pills nav-customs nav-danger mb-3"><!--nav nav-tabs-->
-                    <li [ngbNavItem]="1">
+                <ul ngbNav #nav="ngbNav" [activeId]="1" class="nav nav-pills nav-conect nav-justified"><!--nav nav-tabs-->
+                    <li [ngbNavItem]="1" class="nav-item waves-effect waves-light">
                         <a ngbNavLink class="nav-link" [routerLink]="'/projects/config/'+userData._id+'/areas'">
-                            <span class="d-sm-block">Areas Administrativas</span>
+                            <span class="d-sm-block"><span class="badge bg-success rounded-circle">1</span> Areas Administrativas</span>
                         </a>
                         <ng-template ngbNavContent>
                             <ng-template [ngTemplateOutlet]="TabContent"></ng-template>
                         </ng-template>
                     </li>
-                    <li [ngbNavItem]="2">
+                    <li [ngbNavItem]="2" class="nav-item waves-effect waves-light">
                         <a ngbNavLink class="nav-link" [routerLink]="'/projects/config/'+userData._id+'/installations'">
-                            <span class="d-sm-block">Instalaciones y procesos</span>
+                            <span class="d-sm-block"><span class="badge bg-success rounded-circle">2</span> Instalaciones y procesos</span>
                         </a>
                         <ng-template ngbNavContent>
                             <ng-template [ngTemplateOutlet]="TabContent"></ng-template>
