--- a/src/app/pages/projects/installations/installations.component.html
+++ b/src/app/pages/projects/installations/installations.component.html
@@ -30,7 +30,7 @@
                         <div class="col-sm">
                             <div class="d-flex justify-content-sm-end">
                                 <div class="search-box ms-2">
-                                    <input type="text" class="form-control search" placeholder="Buscar..."
+                                    <input type="text" class="form-control" style="width: 300px;" placeholder="Buscar..."
                                         [(ngModel)]="service.searchTerm">
                                     <i class="ri-search-line search-icon"></i>
                                 </div>
@@ -85,9 +85,9 @@
                         <table mat-table [dataSource]="dataSource" class="table" style="border: gainsboro !important;"><!--class="mat-elevation-z8"-->
                             <ng-container matColumnDef="nombre">
                                 
-                              <th mat-header-cell *matHeaderCellDef> 
-                                <span [style.paddingLeft.px]="40"> Nombre </span>
-                              </th>
+                              <th class="th-center" mat-header-cell *matHeaderCellDef> 
+                                <span> Nombre </span>
+                              </th><!--[style.paddingLeft.px]="40"-->
                             
                               <td mat-cell *matCellDef="let data"> 
                                 <span 
@@ -107,8 +107,8 @@
                             
                             <ng-container matColumnDef="area">
                                 
-                                <th mat-header-cell *matHeaderCellDef> 
-                                  <span [style.paddingLeft.px]="40"> Area </span>
+                                <th class="th-center" mat-header-cell *matHeaderCellDef> 
+                                  <span> Area </span>
                                 </th>
                               
                                 <td mat-cell *matCellDef="let data">
@@ -118,20 +118,28 @@
                             </ng-container> 
                           
                             <ng-container matColumnDef="descripcion">
-                              <th mat-header-cell *matHeaderCellDef> Descripción </th>
+                              <th class="th-center" mat-header-cell *matHeaderCellDef> Descripción </th>
                               <td mat-cell *matCellDef="let data">
                                 <ngb-highlight [result]="data.descripcion"></ngb-highlight>
                               </td>
                             </ng-container> 
 
                             <ng-container matColumnDef="accion">
-                                <th mat-header-cell *matHeaderCellDef style="width: 100px;"> Acción </th>
+                                <th class="th-center" mat-header-cell *matHeaderCellDef style="width: 100px;"> Acción </th>
                                 <td mat-cell *matCellDef="let data">
   
                                       <div class="d-flex gap-2">
                                           <div class="edit">
                                             <div class="hstack gap-3 fs-15">
-                                                <a href="javascript:void(0);" class="link-primary" 
+
+                                                <button type="button" class="btn btn-primary w-xxs" data-bs-toggle="modal" data-bs-target="#showModal" (click)="editModal(content,data.id)">Editar</button>
+
+                                                <button type="button" class="btn btn-info w-lg" data-bs-toggle="modal" data-bs-target="#showModal" (click)="openModal(content, data.id)">Sub Instalación</button>
+
+                                                <button type="button" class="btn btn-danger w-xxs" data-bs-toggle="modal" data-bs-target="#deleteRecordModal"
+                                                (click)="confirm(deleteModel,data.id)">Eliminar</button>
+
+                                               <!--<a href="javascript:void(0);" class="link-primary" 
                                                 title="Ver"
                                                 data-bs-toggle="modal" data-bs-target="#showModal" (click)="editModal(content,data.id)"><i class="ri-eye-line"></i></a>
 
@@ -141,7 +149,7 @@
                                                 <a href="javascript:void(0);" class="link-danger" 
                                                 title="Eliminar"
                                                 data-bs-toggle="modal" data-bs-target="#deleteRecordModal"
-                                                (click)="confirm(deleteModel,data.id)"><i class="ri-delete-bin-5-line"></i></a>
+                                                (click)="confirm(deleteModel,data.id)"><i class="ri-delete-bin-5-line"></i></a>-->
                                             </div>
 
                                           </div>
@@ -223,7 +231,7 @@
             <div class="mb-3">
                 <label for="area-field" class="form-label">Area Administrativa</label>
                 <select class="form-select mb-3" aria-label="Area Administrativa" placeholder="Seleccione Area Administrativa" formControlName="area" (change)="selectArea($event)">
-                    <option selected>Seleccione Area Administrativa </option>
+                    <option value="" selected>Seleccione Area Administrativa </option>
                     <option *ngFor="let r of areas;" value="{{r.id}}">{{r.nombre}}</option>
                 </select>
                 <div class="invalid-feedback">Por favor ingresar area administrativa.</div>
@@ -234,7 +242,7 @@
                 <div class="mb-3">
                     <label for="area-field" class="form-label">Sub Area Administrativa</label>
                     <select class="form-select mb-3" placeholder="Seleccione Sub Area Administrativa" (change)="selectAreaChildren($event, i)">
-                                        <option selected>Seleccione Sub Area Administrativa</option>
+                                        <option value="" selected>Seleccione Sub Area Administrativa</option>
                                         <option *ngFor="let o of item.options;" value="{{o.id}}">{{o.nombre}}</option>
                     </select>
                     <div class="invalid-feedback">Por favor ingresar area administrativa.</div>
