--- a/src/app/pages/projects/areas/areas.component.html
+++ b/src/app/pages/projects/areas/areas.component.html
@@ -131,7 +131,7 @@
                                             <div class="hstack gap-3 fs-15">
                                                 <button type="button" class="btn btn-primary w-xxs" data-bs-toggle="modal" data-bs-target="#showModal" (click)="editModal(content,data.id)">Editar</button>
 
-                                                <button type="button" class="btn btn-info w-md" data-bs-toggle="modal" data-bs-target="#showModal" (click)="openModal(content, data.id)">Sub Area</button>
+                                                <button type="button" class="btn btn-info w-md" data-bs-toggle="modal" data-bs-target="#showModal" (click)="openModal(content, data.id, data.nombre)">Sub Area</button>
 
                                                 <button type="button" class="btn btn-danger w-xxs" data-bs-toggle="modal" data-bs-target="#deleteRecordModal"
                                                 (click)="confirm(deleteModel,data.id)">Eliminar</button>
@@ -194,7 +194,7 @@
 <!-- Add ListJs Data -->
 <ng-template #content role="document" let-modal>
     <div class="modal-header bg-light p-3">
-        <h5 class="modal-title" id="exampleModalLabel">Agregar <span *ngIf="area_id">Sub </span>Area Administrativa</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Agregar <span *ngIf="area_id">Sub </span>Area Administrativa <span *ngIf="area_id">a {{area_name}}</span></h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar" id="close-modal"
             (click)="modal.dismiss('Cross click')"></button>
     </div>
