--- a/src/app/pages/projects/areas/areas.component.html
+++ b/src/app/pages/projects/areas/areas.component.html
@@ -129,11 +129,11 @@
                                       <div class="d-flex gap-2">
                                           <div class="edit">
                                             <div class="hstack gap-3 fs-15">
-                                                <button type="button" class="btn btn-primary w-xxs" data-bs-toggle="modal" data-bs-target="#showModal" (click)="editModal(content,data.id)">Editar</button>
+                                                <button type="button" class="btn btn-sm btn-primary edit-item-btn" data-bs-toggle="modal" data-bs-target="#showModal" (click)="editModal(content,data.id)">Editar</button>
 
-                                                <button type="button" class="btn btn-info w-md" data-bs-toggle="modal" data-bs-target="#showModal" (click)="openModal(content, data.id, data.nombre)">Sub Area</button>
+                                                <button type="button" class="btn btn-sm btn-success edit-item-btn" style="width: 70px;" data-bs-toggle="modal" data-bs-target="#showModal" (click)="openModal(content, data.id)">Sub Area</button>
 
-                                                <button type="button" class="btn btn-danger w-xxs" data-bs-toggle="modal" data-bs-target="#deleteRecordModal"
+                                                <button type="button" class="btn btn-sm btn-danger remove-item-btn" data-bs-toggle="modal" data-bs-target="#deleteRecordModal"
                                                 (click)="confirm(deleteModel,data.id)">Eliminar</button>
 
                                                 <!--<a href="javascript:void(0);" class="link-primary" 
