correccion nombre instalacion

--- a/src/app/pages/projects/installations/installations.component.html
+++ b/src/app/pages/projects/installations/installations.component.html
@@ -25,7 +25,7 @@
                             <div class="d-flex gap-1">
                                 <h4 class="card-title mb-0">{{subtitle}}</h4>
                             </div>
-                            <p>Agrega instalaciones y procesos para gestionar su cumplimiento y vincularlas con tus actividades</p>
+                            <p>Agrega Parte, Obras y Acciones para gestionar su cumplimiento y vincularlas con tus actividades</p>
                         </div>
                         <div class="col-sm">
                             <div class="d-flex justify-content-sm-end">
